# paddlecustomdevice-sycl

./: .gitmodules  Paddle  README.md  README_en.md  README_ja.md  git-proxy.sh
backends/custom_cpu/: CMakeLists.txt
backends/custom_cpu/kernels/: argsort_kernel.cc  compare_kernel.cc  elementwise_kernel.cc  full_kernel.cc  reduce_kernel.cc  reshape_kernel.cc
backends/custom_cpu/runtime/: runtime.cc
backends/custom_cpu/tools/dockerfile/: Dockerfile.ubuntu18.aarch64.gcc82
backends/intel_gpu/: CMakeLists.txt
backends/intel_gpu/kernels/: cast_kernel.cc  compare_kernel.cc  elementwise_kernel.cc  mean_kernel.cc  reduce_kernel.cc  slice_kernel.cc  softmax_kernel.cc
backends/sycl/: CMakeLists.txt  README.md  env.sh  load.sh  loadpy39.sh
backends/sycl/build.bak/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  nohup.out  setup.py
backends/sycl/build.bak/python/paddle_custom_sycl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backends/sycl/build.bak/tests/: CTestTestfile.cmake  cmake_install.cmake  example.py  test_MNIST_model.py  test_mean_op.py
backends/sycl/build.bak/tests/unittests/: CTestTestfile.cmake  cmake_install.cmake  test_argsort_op.py  test_assign_value_op.py  test_mean_op.py  test_memcpy_op.py  test_slice_op.py  test_softmax_op.py  test_transpose_op.py
backends/sycl/kernels/: argsort_kernel.cc  assign_value_kernel.cc  cast_kernel.cc  compare_kernel.cc  contiguous_kernel.cc  conv_kernel.cc  dnn_support.hpp  elementwise_kernel.cc  embedding.cc  full_kernel.cc  gaussian.cc  matmul_kernel.cc  mean_kernel.cc  memcpy_kernel.cc  phi_funcs.h  reduce_kernel.cc  reshape_kernel.cc  slice_kernel.cc  softmax_kernel.cc  transpose_kernel.cc  uniform_random_kernel.cc
backends/sycl/runtime/: runtime.cc
backends/sycl/tests/: CMakeLists.txt  resnet_test.py  test_elementwise.py
backends/sycl/tests/unittests/: CMakeLists.txt  test_cast_op.py  test_compare_op.py  test_elementwise_mul_op.py  test_fill_constant_op.py  test_reduce_op.py  test_reshape_op.py  test_uniform_random_op.py
cmake/: paddle.cmake
